# casper-trust-rail

./: .env.example  .gitignore  DEMO.md  DEPLOY.md  DEPLOYED.md  LICENSE  README.md  package.json  tsconfig.json
.github/workflows/: ci.yml
contracts/: Cargo.toml  Odra.toml  rust-toolchain.toml
contracts/src/: agent_identity.rs  lib.rs  reputation.rs  rwa_oracle.rs
scripts/: run-demo.ts  run-testnet.ts
src/: index.ts
src/agent/: TrustRailAgent.ts  types.ts
src/attestation/: Ed25519Attestation.ts  postAttestation.ts
src/casper/: CasperClient.ts  MockCasperRpc.ts  RealCasperRpc.ts  casperSdkFacade.ts  types.ts
src/llm/: gemini.ts
src/oracle/: ReputationTracker.ts  RiskAssessor.ts  TBillDataSource.ts
src/sanctions/: StaticSanctionOracle.ts  screener.ts
src/types/: casper-js-sdk.d.ts  google-genai.d.ts
src/x402/: CasperX402Facilitator.ts  ExactPaymentSigner.ts  types.ts
test/: attestation.test.ts  casper-client.test.ts  gemini.test.ts  reputation-tracker.test.ts  risk-assessor.test.ts  sanctions.test.ts  trust-rail-agent.test.ts  x402.test.ts
