[package]
name = "casper-trust-rail-contracts"
version = "0.1.0"
edition = "2021"
description = "Trust Rail on-chain contracts for Casper: agent identity, reputation, and the RWA oracle."
license = "MIT"

[dependencies]
odra = { version = "2.8.2", features = [], default-features = false }
odra-casper-livenet-env = { version = "2.8.2", optional = true }

[dev-dependencies]
odra-test = { version = "2.8.2", features = [], default-features = false }

[build-dependencies]
odra-build = { version = "2.8.2", features = [], default-features = false }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
odra-build = { version = "2.8.2", features = [], default-features = false }

[features]
livenet = ["odra-casper-livenet-env"]

[[bin]]
name = "casper_trust_rail_contracts_build_contract"
path = "bin/build_contract.rs"
test = false

[[bin]]
name = "casper_trust_rail_contracts_build_schema"
path = "bin/build_schema.rs"
test = false

[[bin]]
name = "deploy"
path = "bin/deploy.rs"
required-features = ["livenet"]
test = false

[profile.release]
codegen-units = 1
lto = true

[profile.dev.package."*"]
opt-level = 3
